2007-01-07 22:02  rsbivand

	* DESCRIPTION, configure, configure.in, R/ogr_write.R: 1.4
	  configure

2006-12-06 11:23  rsbivand

	* inst/README.windows: VC++

2006-12-02 16:38  rsbivand

	* INDEX, R/SGDF2RGB.R: release

2006-11-28 22:01  rsbivand

	* R/sp_gdal.R: print formats

2006-11-28 16:08  rsbivand

	* NAMESPACE, R/SGDF2RGB.R, R/sp_gdal.R, man/SGDF2PCT.Rd,
	  man/SGDF2RGB.Rd, man/writeOGR.Rd: vec2RGB

2006-11-27 10:48  rsbivand

	* DESCRIPTION, NAMESPACE, R/gdal.R, R/sp_gdal.R,
	  man/GDALDataset-class.Rd, man/GDALDriver-class.Rd,
	  man/readGDAL.Rd, src/gdal-bindings.cpp: create2GDAL

2006-11-24 09:38  rsbivand

	* NAMESPACE, R/gdal.R, R/project.R, R/sp_gdal.R, src/projectit.cpp,
	  man/projInfo.Rd: projInfo

2006-11-22 21:20  rsbivand

	* DESCRIPTION, R/gdal.R, R/ogr.R, R/ogr_write.R,
	  man/GDALDriver-class.Rd, man/GDALMajorObject-class.Rd,
	  man/readOGR.Rd, man/writeOGR.Rd, src/gdal-bindings.cpp: write
	  classes

2006-11-08 12:48  rsbivand

	* src/: projectit.c, projectit.cpp: projectit.cpp

2006-11-06 15:45  rsbivand

	* src/OGR_write.cpp: no MultiPolygon objects --enable-auto-import

2006-11-06 14:43  rsbivand

	* INDEX, inst/gdal/s57agencies.csv, inst/proj/esri.extra,
	  inst/proj/nzgd2kgrid0005.gsb, inst/proj/other.extra: metadata

2006-11-06 13:33  rsbivand

	* R/ogr_write.R, man/readOGR.Rd, man/writeOGR.Rd,
	  src/OGR_write.cpp: options

2006-11-05 21:32  rsbivand

	* inst/: gdal/ecw_cs.dat, gdal/ellipsoid.csv, gdal/gcs.csv,
	  gdal/gdal_datum.csv, gdal/pcs.csv, gdal/projop_wparm.csv,
	  gdal/s57objectclasses_aml.csv, gdal/stateplane.csv,
	  gdal/unit_of_measure.csv, proj/FL, proj/MD, proj/TN, proj/WI,
	  proj/WO, proj/alaska, proj/conus, proj/epsg, proj/hawaii,
	  proj/null, proj/prvi, proj/stgeorge, proj/stlrnc, proj/stpaul,
	  proj/world: proj/gdal share

2006-11-05 21:05  rsbivand

	* man/writeOGR.Rd, src/OGR_write.cpp, src/RGDAL.def: options

2006-11-04 22:18  rsbivand

	* R/gdal.R, R/sp_gdal.R, man/GDALDataset-class.Rd,