@@ -11,56 +11,124 @@ The MSYS build used here was proj 4.5.0 without jni, GDAL CVS 1.3.2+ dated Octob
 Alternative build approach:
 
 
-Installing FWTools is a convenient way to get started (but will be limited to the - extensive - range of drivers built into the binary package):
+Installing FWTools is a convenient way to get started (but will be limited to
+the - extensive - range of drivers built into the binary package):
 
 http://fwtools.maptools.org/
 
 http://fwtools.maptools.org/windows-main.html
 
-Michael Sumner reports (6 December 2006):
+Setting the FWTools bin/ directory in the PATH environmental variable is
+essential, (GDAL_DATA is set internally to the copy included in the rgdal
+package).
 
-Here I am using a source install of R 2.4.0 in C:/R/src, and binary install of
-FWTools in C:/FWTools.  I have Visual C++ 2005, Express Edition.
+The R Windows binary rgdal package can built against an FWTools Windows binary,
+using VC++.
+
+
+Notes:
+###############################################################################
+## Building rgdal binary against FWTools binary using VC++
+
+MDSumner 30 January 2007
+
+Windows XP2, SP2, .NET 2.0
+Rtools in C:/R/Rtools.
+
+Here I am using a binary install of R 2.4.1 in C:/R/R-2.4.1, and binary install
+of FWTools 1.1.3 in C:/FWTools.  
+
+gdalinfo --version
+GDAL 1.4.0.0, FWTools 1.1.3, released 2007/01/04
+
+I have Visual C++ 2005, Express Edition.
 http://msdn.microsoft.com/vstudio/express/visualc/download/
 Version 8.0.50727.42  (RTM.050727-4200)
 
-Windows XP2, SP2, .NET 2.0
-
-Rtools in C:/R/Rtools.
 
 
-[R]/bin, [FWTools]/bin and [Rtools]/bin are all in the path.
+I obtain rgdal source via CVS:
 
-###############################################################################
-## Building rgdal.dll in rgdal/src:
+cvs -d:pserver:anonymous@rgdal.cvs.sourceforge.net:/cvsroot/rgdal login 
+cvs -z3 -d:pserver:anonymous@rgdal.cvs.sourceforge.net:/cvsroot/rgdal co -P
+rgdal
 
-## Build Rdll.lib and place in [R]\libs\ (see example below in link step, and see
-##  http://www.stats.uwo.ca/faculty/murdoch/software/compilingDLLs/readme.packages.txt)
+[R]/bin, [FWTools]/bin and [Rtools]/bin (as per standard R windows) are all in
+the path.
+
+1. Ensure you have Rdll.lib
+
+## Build Rdll.lib and place in [R]\libs\ (see example below in link step, and
+see
+## 
+http://www.stats.uwo.ca/faculty/murdoch/software/compilingDLLs/readme.packages.t
+xt)
 
 ## [R]src\gnuwin32
 
 make R.exp
 lib /def:R.exp /out:Rdll.lib
 
-## run command window with VC++ (I can't see how else to include it in the path)
-## First compile the C++ against R and FWTools include
+2. Ensure the configuration.win, Makefile.win and RGDAL.def are all correct. 
+
+
 
 ## set the location of GDAL_HOME in configure.win (mine is GDAL_HOME="C:/FWTools")
 ## Also change libgdal-1.dll to gdal_fw.dll in configure.win
 
-## [rgdal]/src 
+Specifically, mine looks like this:
+
+-//-- start configure.win
+
+#!/bin/sh
+if test -z "$GDAL_HOME" ; then
+    GDAL_HOME="C:/FWTools"
+fi
+echo "GDAL_HOME=${GDAL_HOME}" > src/Makeconf.win
+
+echo "using GDAL_HOME: ${GDAL_HOME}"
+
+mkdir $DPKG/libs
+cp ${GDAL_HOME}/bin/gdal_fw.dll $DPKG/libs
+
+-//-- end configure.win
+
+
+## [rgdal]/src  
 ##   - includes a Makefile.win with one line:   all:
 ##   - and RGDAL.def as supplied in rgdal_0.5-3.tar.gz
 
 
-cl /MT /Ox /EHsc /D "WIN32" /c /I C:/R/Rsrc/src/include /I C:/FWTools/include *.cpp
+## run command window with VC++ (I can't see how else to include it in the path)
+## First compile the C++ against R and FWTools include
+
+
+3. Compile and link
+
+cl /MT /Ox /EHsc /D "WIN32" /c /I C:/R/Rsrc/src/include /I C:/FWTools/include
+*.cpp
 
 ## Then link the resulting files with R and gdal:
 ##  (note that this includes all the present .obj files, and the gdal_ and proj_ libs from GDAL_HOME
 
-link /dll /out:rgdal.dll /def:rgdal.def gdal-bindings.obj ogr_geom.obj ogr_proj.obj ogrsource.obj OGR_write.obj ogrdrivers.obj projectit.obj C:\R\Rsrc\libs\Rdll.lib /libpath:"C:\FWTools\lib" gdal_i.lib proj_i.lib
+link /dll /out:rgdal.dll /def:rgdal.def gdal-bindings.obj ogr_geom.obj
+ogr_proj.obj ogrsource.obj OGR_write.obj ogrdrivers.obj projectit.obj 
+C:\R\Rsrc\libs\Rdll.lib /libpath:"C:\FWTools\lib" gdal_i.lib proj_i.lib
 
-Then build and install rgdal as normal.
+4. Then build and install rgdal as normal.
+
+R CMD build rgdal 
+R CMD build rgdal -- binary
+
+At this stage you will see errors if gdal_fw.dll (libgdal-1.dll) can't be found
+(I don't know the difference, it seems to work)
+
+R CMD INSTALL --library [path-to-[R]/library-of-choice] rgdal_[version#].tar.gz
+R
+
+>library(rgdal, lib.loc = "[path-to-[R]/library-of-choice]")
+>CRS("+proj=longlat")  ## in early versions this didn't work without datum=[...]
+
 
 
 ------------------------------- Earlier notes (RSB)
