@@ -1,4 +1,16 @@
 EXPORTS
+checkCRSArgs
+ogrDataFrame
+OGRFeatureInfo
+ogrFIDs
+ogr_GetDriverNames
+ogrInfo
+ogrP4S
+OGR_write
+p4s_to_wkt
+project
+project_inv
+projInfo
 RGDAL_CloseDataset
 RGDAL_CloseHandle
 RGDAL_CopyDataset
@@ -6,6 +18,7 @@ RGDAL_CreateDataset
 RGDAL_DeleteFile
 RGDAL_DeleteHandle
 RGDAL_GetAccess
+RGDAL_GenCMap
 RGDAL_GetCategoryNames
 RGDAL_GetColorInterp
 RGDAL_GetColorTable
@@ -23,6 +36,7 @@ RGDAL_GetPaletteInterp
 RGDAL_GetProjectionRef
 RGDAL_GetRasterAccess
 RGDAL_GetRasterBand
+RGDAL_GetRasterBlockSize
 RGDAL_GetRasterCount
 RGDAL_GetRasterData
 RGDAL_GetRasterXSize
@@ -38,16 +52,6 @@ RGDAL_SetGeoTransform
 RGDAL_SetMetadata
 RGDAL_SetNoDataValue
 RGDAL_SetProject
-ogrInfo
-ogrFIDs
-ogrDataFrame
-OGRFeatureInfo
 R_OGR_CAPI_features
-p4s_to_wkt
-ogrP4S
-ogr_GetDriverNames
-OGR_write
-checkCRSArgs
-project
-project_inv
 transform
+
